# backertrack

./: .gitignore  Cargo.toml  LICENSE  README.md  test
client/: Cargo.toml  elm.json  package-lock.json  package.json  serve.bat  serve.sh
client-old/: .gitignore  sass.bat  serve.bat  serve.sh
client-old/elm-stuff/0.19.0/: Auth.elmi  Example.elmi  Example.elmo  Ledger.elmi  Panic.elmi
client-old/src/: Auth.elm  Ledger.elm  Main.elm  Routing.elm
client-old/static/: index.html
client/api_tests/api/: settings.json
client/elm-stuff/0.19.0/: Auth.elmo  Ledger.elmo  Loading.elmi  Loading.elmo  Main.elmi  Main.elmo  Panic.elmo
client/sass/: config.scss  main.scss  menu.scss  navbar.scss
client/src/: Ledger.elm  Loading.elm  Main.elm  Panic.elm  Utils.elm  auth.rs  bootstrap.js  index.html  main.rs  model.rs  navbar.rs
client/static/: index.html
server/: Cargo.toml
src/: main.rs  utils.rs
src/ledger/: accounts.rs  donations.rs  export.rs  info.rs  mod.rs  payout.rs  structure.rs
src/ui/: budget.rs  mod.rs  tui_utils.rs
src/ui/ledger/: delete.rs  list_nav.rs  mod.rs  new_account.rs  new_txn.rs  text.rs  utils.rs
