[package]
name = "backertrack"
version = "1.0.0"
authors = ["Théo Degioanni <moxinilian@tutanota.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
chrono = { version = "0.4.6", features = ["serde"] }
num = { version = "0.2.0", features = ["serde"] }
tui = "0.3.0"
termion = "1.5.1"
separator = "0.4.0"
num-derive = "0.2.3"
num-traits = "0.2.6"
lazy_static = "1.2.0"
regex = "1.1.0"
hex = "0.3.2"
csv = "1.0.5"
rust-crypto = "0.2.36"
